# rust-openai-chatbox

./: .env  .gitignore  Cargo.toml  README.md  rustfmt.toml
buddy/: buddy.toml  instructions.md
buddy/.buddy/: conv.json
src/: main.rs
src/ais/: assistant.rs  mod.rs  msg.rs
src/ais/assistant/: mod.rs
src/buddy/: config.rs  mod.rs
src/utils/: cli.rs  files.rs  mod.rs
