[package]
name = "ai-chatbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
async-openai = "0.20.0"
# -- D/Serialize
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# -- Cli
dialoguer = "0.11.0"
console = "0.15.0"
textwrap = "0.16.1"
# -- Files
walkdir = "2.3.2"
globset = "0.4.14"
# -- Others
derive_more = { version ="1.0.0-beta.6", features = ["from", "display", "deref"] }
dotenv = "0.15.0"